fixed input styles so input fields blend with eye icons for toggling password visibility

--- a/src/app/my-account/my-account.component.css
+++ b/src/app/my-account/my-account.component.css
@@ -1,4 +1,6 @@
-
+.pass-inputs {
+    border-right: none;
+}
 
 .card-title {
     margin: 0;
